# acm-solution-archive

./: README.md
2022-ICPC-North-America-Qualifier/beastbullies/: CMakeLists.txt  main.h  out.cpp  stress.cpp  tests  tests.cpp
2022-ICPC-North-America-Qualifier/birthdaygift/: CMakeLists.txt  main.h  out.cpp  stress.cpp  tests  tests.cpp
2022-ICPC-North-America-Qualifier/classfieldtrip/: CMakeLists.txt  main.cpp  main.h  out.cpp  tests  tests.cpp
2022-ICPC-North-America-Qualifier/ghostleg/: CMakeLists.txt  main.h  out.cpp  tests  tests.cpp
2022-ICPC-North-America-Qualifier/knightfly/: CMakeLists.txt  checker.h  main.h  tests  tests.cpp
2022-ICPC-North-America-Qualifier/mazeman/: CMakeLists.txt  main.h  out.cpp  tests  tests.cpp
2022-ICPC-North-America-Qualifier/movienight/: CMakeLists.txt  main.h  out.cpp  stress.cpp  tests  tests.cpp
2022-ICPC-North-America-Qualifier/platformplacing/: CMakeLists.txt  main.h  out.cpp  tests  tests.cpp
2022-ICPC-North-America-Qualifier/roomevacuation/: CMakeLists.txt  main.h  out.cpp  tests  tests.cpp
2022-ICPC-North-America-Qualifier/smallestcalculatedvalue/: CMakeLists.txt  main.h  out.cpp  tests  tests.cpp
2022-ICPC-North-America-Qualifier/spideydistance/: CMakeLists.txt  main.h  out.cpp  stress.cpp  tests  tests.cpp
2022-ICPC-North-America-Qualifier/tollroads/: CMakeLists.txt  main.h  out.cpp  stress.cpp  tests  tests.cpp
